# repseq

./: .gitignore  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
examples/euscape/: README.md
examples/euscape/evaluate/: coverage_metrics.tsv
examples/euscape/inputs/: kleborate.tsv  tree.nwk
examples/euscape/select/: coverage_summary.txt  diversity_scores.csv  report.tsv  selected.txt
examples/euscape/sweep/: pareto.tsv  pareto_note.txt
examples/euscape_joint/: README.md  coverage_summary.txt  report.tsv  selected.txt
examples/euscape_nsga2/: README.md  pareto_front.tsv  recommended.txt
examples/euscape_nsga3/: README.md  abricate_plasmidfinder.tsv  diversity_curve.tsv  pareto_front.tsv  recommended.txt
src/dustmeselecta/: __init__.py  amr_cover.py  cli.py  evaluate.py  plots.py  select.py  sweep.py
src/repseq/: __init__.py  amr_cover.py  cli.py  diversity.py  evaluate.py  joint.py  log.py  nsga2.py  nsga3.py  phylo.py  plots.py  select.py  sweep.py
test_data/: download.sh
test_output/: coverage_summary.txt  selected.txt
test_output2/: coverage_summary.txt
test_output2/kleborate_output/: klebsiella_pneumo_complex_hAMRonization_output.txt  klebsiella_pneumo_complex_output.txt
tests/: test_amr_cover.py  test_select.py
