[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "repseq"
version = "0.1.0"
description = "Select representative bacterial isolates for long-read sequencing using phylogenetic + AMR diversity"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pandas>=2.0",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "biopython",
]

[project.scripts]
repseq = "repseq.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
